Revert "pop_fraction instead of pif or paf functions working in attribute funcions until deaths from lifetable and exp distribution"
This reverts commit b0813fc89c8bacad05dd951e840bc72770c26ed6.

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -49,7 +49,7 @@ library(devtools)
 ```{r load bestcost package}
 # Load package (either current version or installed version)
 devtools::load_all(export_all = FALSE)
-#library(bestcost)
+library(bestcost)
 ```
 
 
@@ -408,6 +408,9 @@ for(d in c("natural", "total")){
 
 bestcost_pm_deaths_lifetable_airqplus <-
   bestcost::attribute_deaths_from_lifetable(
+  # bestcost::attribute(
+    # health_metric = "deaths_from_lifetable",
+    # risk_method = "relative_risk",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
