Added arguments "deaths_male" and "deaths_female" to "attribute()" and new mask function "attribute_yll_from_lifetable_airqplus"
Deaths are needed to calculate the death probability of the overall total population.
Checked that "attribute" still works without the two new argumments.
The functions "compile_lifetable_pop" & "get_pop_impact" have been modified so that they can digest the two new arguments.

--- a/r_package/testing/Replication_AirQ+/Replication_AirQ+.Rmd
+++ b/r_package/testing/Replication_AirQ+/Replication_AirQ+.Rmd
@@ -7,7 +7,7 @@ output: html_document
 # Goal
 Replicate the population evolution, pre-mature deaths, YLL of AirQ+ calculations
 
-```{r Setup, eval=FALSE, include=FALSE}
+```{r Setup, include=FALSE}
 # Load packages
 library(dplyr)
 library(openxlsx)
